<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:id="@+id/_main">

	<androidx.core.widget.NestedScrollView
		android:id="@+id/scroll_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="9dp">

			<LinearLayout
				android:id="@+id/card_status"
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:layout_margin="6dp"
				android:background="@drawable/bg_card_status_on"
				android:elevation="@dimen/size_elevation_card"
				android:orientation="horizontal"
				android:padding="10dp">

				<LinearLayout
					android:id="@+id/linear4"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:orientation="vertical">

					<LinearLayout
						android:id="@+id/linear5"
						android:layout_width="wrap_content"
						android:layout_height="20dp"
						android:gravity="center_vertical"
						android:orientation="horizontal">

						<ImageView
							android:id="@+id/imageview1"
							android:layout_width="22dp"
							android:layout_height="22dp"
							android:padding="4dp"
							android:scaleType="centerInside"
							android:src="@drawable/ic_aurora_game" />

						<TextView
							android:id="@+id/textview3"
							style="@style/Aurora.Font.Regular"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/tag_aurora_game"
							android:textColor="@color/colorOutlineVariant"
							android:textSize="10sp"
							android:textStyle="bold" />
					</LinearLayout>

					<TextView
						android:id="@+id/textview1"
						style="@style/Aurora.Font.Bold"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="3dp"
						android:paddingRight="3dp"
						android:paddingBottom="1dp"
						android:text="@string/app_name"
						android:textColor="@color/colorOnSurface"
						android:textSize="21sp"
						android:textStyle="bold" />

					<TextView
						android:id="@+id/textview2"
						style="@style/Aurora.Font.Regular"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingLeft="3dp"
						android:paddingTop="1dp"
						android:paddingRight="3dp"
						android:paddingBottom="2dp"
						android:text="@string/app_version"
						android:textColor="@color/colorOnSurfaceVariant"
						android:textSize="12sp"
						android:textStyle="bold" />

					<LinearLayout
						android:id="@+id/linear6"
						android:layout_width="150dp"
						android:layout_height="match_parent"
						android:gravity="bottom"
						android:orientation="horizontal">

						<LinearLayout
							android:id="@+id/linear7"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="bottom"
							android:orientation="vertical">

							<TextView
								android:id="@+id/textview5"
								style="@style/Aurora.Font.Bold"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="2dp"
								android:paddingRight="2dp"
								android:text="@string/tag_uptime"
								android:textColor="@color/colorOnSurfaceVariant"
								android:textSize="12sp"
								android:textStyle="bold" />

							<TextView
								android:id="@+id/textview4"
								style="@style/Aurora.Font.Regular"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingRight="2dp"
								android:paddingBottom="2dp"
								android:text="00:00:00"
								android:textSize="14sp"
								android:textStyle="bold" />
						</LinearLayout>

						<LinearLayout
							android:id="@+id/linear8"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="bottom"
							android:orientation="vertical">

							<TextView
								android:id="@+id/textview6"
								style="@style/Aurora.Font.Bold"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingTop="2dp"
								android:paddingRight="2dp"
								android:text="@string/tag_pid"
								android:textColor="@color/colorOnSurfaceVariant"
								android:textSize="12sp"
								android:textStyle="bold" />

							<TextView
								android:id="@+id/textview7"
								style="@style/Aurora.Font.Regular"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingLeft="2dp"
								android:paddingRight="2dp"
								android:paddingBottom="2dp"
								android:text="20843"
								android:textSize="14sp"
								android:textStyle="bold" />
						</LinearLayout>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>
